# SDL_Template

./: CMakeLists.txt  CMakePresets.json
SDL_Template/: main.cpp
SDL_Template.xcodeproj/: project.pbxproj
SDL_Template.xcodeproj/xcuserdata/daisuke.xcuserdatad/xcschemes/: xcschememanagement.plist
doc/vscode_templates/: c_cpp_properties.json  tasks.json
src/: Actor.cpp  Actor.h  Application.cpp  Application.h  BallActor.cpp  BallActor.h  Ground.cpp  Ground.h  LineShape.cpp  LineShape.h  PendulumActor.cpp  PendulumActor.h  RectangleShape.cpp  RectangleShape.h  RenderUtils.h  Renderer.cpp  Renderer.h  Shape.cpp  Shape.h  SingleInstance.cpp  SingleInstance.h  main.cpp  physics
